# CCEP_GUI

./: CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  LICENSE  README.md  SECURITY.md  pyproject.toml  run_analyzer.py
ccep-analyzer/: CONTRIBUTING.md  README.md  environment.yml  requirements.txt
ccep-analyzer/docs/: coordinate_file_format.md  data_security.md  license_options.md
ccep-analyzer/examples/: README.md
ccep-analyzer/src/ieeg_ccep_analyzer/: app.py
docs/: release_checklist.md  zenodo_release_steps.md
examples/: synthetic_coordinates.csv
src/ieeg_ccep_analyzer/: __init__.py
tests/: test_import.py
